--- a/index.html
+++ b/index.html
@@ -7,27 +7,40 @@
   <!-- tailwind cdn -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- font awesome cdn -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-TjgybLgApXht4+/lK7XW7F0dWcGm2HrsWBDPvBv8KRRcF4Zb9D+uM3G8gN9jxCuwNLf3jAZj4W9R+YmjCWGeNQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-papNM8m+z+1KOZ6+KLzI0fJ1mO+oUJ5MQiYxP0S+f0PMSIDF5Zl3Z9d2zE5xK4s9GukTdzZnVWZ3DgkPjjrKGQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- noto serif font cdn -->
  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body class="mx-auto container">
-  <section>
+<body class="mx-auto container  ">
+  <section class="ml-4 mr-2">
     <nav class="flex items-center justify-between">
       <div>
         <img src="assets/logo.png" alt="">
       </div>
       <div>
-       <div class="flex gap-10">
-         <p class="font-bold">Home</p>
-        <p>Shop</p>
-        <p>About us</p>
-        <p class="font-semibold">Cart($56)</p>
+       <div class="flex gap-10 ">
+         <p class="font-bold hidden md:block">Home</p>
+        <p class=" hidden md:block">Shop</p>
+        <p class=" hidden md:block">About us</p>
+        <p class="font-semibold"> <i class="fa-solid fa-cart-shopping"></i> Cart($56)</p>
        </div>
       </div>
-    </nav>
+    </nav> 
+    <!-- hero section -->
+     <section class="md:flex justify-between items-center mt-10">
+           <div>
+            <img src="assets/hero-flower.png" alt="">
+        </div>
+        <div>
+            <h1 class="text-4xl pb-4 text-orange-600 font-bold hidden md:block ">FLOWERS</h1>
+            <h1 class="font-bold text-4xl mt-5">ALWAYS <span class="text-4xl text-orange-600">FRESH FLOWERS</span></h1>
+            <p class="text-xl">Indulge your senses with the beauty and fragrance of <br> our fresh flower shop. From classic roses to exotic <br>blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion. </p>
+        </div>
+     
+     </section>
   </section>
 </body>
 </html>
