latest deal section

--- a/index.html
+++ b/index.html
@@ -173,6 +173,61 @@
          </ul>
       </div>
      </section>
+
+     <!-- latest deal section -->
+      <section>
+          
+         <div>
+            <h1 class="text-4xl text-center mt-10 text-orange-600 font-bold">Latest <span class="text-black font-bold">Deals</span></h1>
+            <p  class="text-gray-600 text-center mb-4 pt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. <br> From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+         </div>
+         <!-- img section -->
+         <div class="flex gap-4 mb-4">
+          <div class="relative">
+              <div class="pb-6 brightness-50 ">
+               <img src="assets/deal-bloom.png" alt="">
+            </div>
+            <div class="absolute top-8 left-16">
+               <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
+            <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
+            </div>
+            <!-- deal ana -->
+            <div class="relative brightness-50">
+               <img src="assets/deal-ana.png" alt="">
+            </div>
+            <div class="absolute bottom-16 left-16">
+              <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
+               <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
+            </div>
+          </div>
+
+          <!-- deal zabo -->
+         <div class="relative">
+             <div >
+              <div class="brightness-50" >
+               <img src="assets/deal-zabo.png" alt="">
+            </div>
+         </div>
+            <div class="absolute bottom-40  left-48">
+               <div >
+                <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
+               <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
+            </div>
+            </div>
+          </div>
+         </div>
+
+      </section>
+      <!-- input section -->
+       <section class="relative">
+         <div >
+            <img src="assets/news-letter-bg.png" alt="">
+         </div>
+         <div class="absolute top-2">
+            <h1 class="text-2xl">Join the Colorful Bunch</h1>
+            <input type=" text" placeholder="Write Email" class="w-full">
+         </div>
+       </section>
  </main>
 
 
