--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
     <!-- trusted seller section -->
      <section class="mt-36 md:flex md:items-center md:justify-center gap-10">
       <div class="relative">
-         <div class="md:block hidden  w-1/4 absolute -top-20 left-[350px]">
+         <div class="md:block hidden  w-1/4 absolute -top-20 left-[350px] ">
             <img   src="assets/trusted-badge.png" alt="">
          </div>
-         <div class="w-10/12">
+         <div class="w-[96%] pb-4 mx-auto">
             <img src="assets/flower-store.png" alt="">
          </div>
       </div>
 
-      <div>
+      <div class="m-6">
          <h1 class="text-4xl text-orange-600 font-bold pb-4">Flower & Plants Lover</h1>
          <ul class="list-disc pl-6">
             <li class="text-gray-600 pb-4">
@@ -179,23 +179,24 @@
           
          <div>
             <h1 class="text-4xl text-center mt-10 text-orange-600 font-bold">Latest <span class="text-black font-bold">Deals</span></h1>
-            <p  class="text-gray-600 text-center mb-4 pt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. <br> From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <p  class="text-gray-600 text-center m-6 pt-4">Indulge your senses with the beauty and fragrance of our fresh flower shop. <br> From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
          </div>
          <!-- img section -->
-         <div class="flex gap-4 mb-4">
+         <div class="md:flex gap-4 mb-4 justify-center">
+            <!-- deal bloom -->
           <div class="relative">
-              <div class="pb-6 brightness-50 ">
-               <img src="assets/deal-bloom.png" alt="">
+              <div class="pb-6 brightness-50 flex justify-center ">
+               <img class="rounded-xl" src="assets/deal-bloom.png" alt="">
             </div>
-            <div class="absolute top-8 left-16">
+            <div class="absolute top-8 left-28">
                <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
             <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
             </div>
             <!-- deal ana -->
-            <div class="relative brightness-50">
-               <img src="assets/deal-ana.png" alt="">
+            <div class="relative brightness-50 flex justify-center mb-6">
+               <img class="rounded-xl" src="assets/deal-ana.png" alt="">
             </div>
-            <div class="absolute bottom-16 left-16">
+            <div class="absolute bottom-16 left-28">
               <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
                <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
             </div>
@@ -204,11 +205,11 @@
           <!-- deal zabo -->
          <div class="relative">
              <div >
-              <div class="brightness-50" >
-               <img src="assets/deal-zabo.png" alt="">
+              <div class="brightness-50 flex justify-center" >
+               <img class="rounded-xl md:w-full w-[369px] " src="assets/deal-zabo.png" alt="">
             </div>
          </div>
-            <div class="absolute bottom-40  left-48">
+            <div class="absolute md:bottom-40  md:left-64 bottom-20 left-28">
                <div >
                 <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
                <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
@@ -223,10 +224,16 @@
          <div >
             <img src="assets/news-letter-bg.png" alt="">
          </div>
-         <div class="absolute top-2">
-            <h1 class="text-2xl">Join the Colorful Bunch</h1>
-            <input type=" text" placeholder="Write Email" class="w-full">
-         </div>
+         <div class="absolute bottom-48 left-[500px]">
+            <h1 class="text-4xl text-center text-white font-semibold pb-6">Join the Colorful Bunch</h1>
+           <div class="flex">
+            <div>
+                <input type=" text" placeholder="Write Email" class="w-80 p-1 rounded-md">
+            </div>
+            <div>
+             <button class="bg-orange-600 text-white px-6 rounded-md py-1  ">Subscribe</button>
+           </div>
+        
        </section>
  </main>
 
