completed footer section

--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@
 
       </section>
       <!-- input section -->
-       <section class="relative">
+       <section class="relative mb-10">
          <div >
             <img src="assets/news-letter-bg.png" alt="">
          </div>
-         <div class="absolute bottom-48 left-[500px]">
-            <h1 class="text-4xl text-center text-white font-semibold pb-6">Join the Colorful Bunch</h1>
+         <div class="absolute bottom-6 left-16 md:bottom-48 md:left-[500px]">
+            <h1 class="md:text-4xl text-xl text-center text-white font-semibold pb-6">Join the Colorful Bunch</h1>
            <div class="flex">
-            <div>
-                <input type=" text" placeholder="Write Email" class="w-80 p-1 rounded-md">
+            <div class="">
+                <input type=" text" placeholder="Write Email" class="md:w-80 p-1 rounded-md ">
             </div>
             <div>
              <button class="bg-orange-600 text-white px-6 rounded-md py-1  ">Subscribe</button>
@@ -236,7 +236,59 @@
         
        </section>
  </main>
+<!-- footer section -->
+ <footer>
+   <section class="md:flex justify-evenly items-center pb-4 m-4">
+      <div>
+         <div>
+            <img src="assets/logo.png" alt="">
+         </div>
+         <div>
+            <p class="text-gray-600 pt-4 pb-4">Indulge your senses with the  beauty and <br> fragrance of our fresh flower shop. </p>
+         </div>
+      </div>
 
+         <!-- option -->
+      <div >
+         <div class="text-gray-600">
+
+            <p class="py-1">Home</p>
+
+            <p class="py-1">About us</p>
+            <p class="py-1">Blog</p>
+            <p class="py-1">FAQ</p>
+            <p class="md:py-1 pb-4">Contact us</p>
+         </div>
+      </div>
+      <!-- option -->
+         <div>
+         <div class="text-gray-600">
+            <p class="py-1">Features</p>
+            <p class="py-1">Pricing</p>
+            <p class="py-1">Privacy Policy</p>
+            <p class="py-1">Terms of Service</p>
+            <p class="md:py-1 pb-4">Help Center</p>
+         </div>
+      </div>
+      <!-- icon section -->
+       <div>
+         <div  class="flex gap-4 items-center" >
+           <div>
+             <img src="assets/icon-facebook.png" alt="">
+           </div>
+          <div>
+              <img src="assets/icon-youtube.png" alt="">
+          </div>
+          <div>
+              <img src="assets/icon-linkedin.png" alt="">
+          </div>
+           <div>
+             <img src="assets/icon-twitter.png" alt="">
+           </div>
+         </div>
+       </div>
+   </section>
+ </footer>
 
 </body>
 </html>
