--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body class="mx-auto container  ">
+<body class="mx-auto container ">
  <header>
      <section class="ml-4 mr-2">
     <nav class="flex items-center justify-between">
@@ -73,7 +73,7 @@
                  <div>
                     <h1 class="text-2xl font-semibold text-center pt-1 ">Lily Blossom</h1>
                     <p  class="text-2xl font-bold text-center pb-1">20 usd</p>
-                    <button class="text-white bg-orange-600 px-[89px] md:px-[93px] py-1 mb-4">Add To Cart</button>
+                    <button class="text-white bg-orange-600 px-[89px] md:px-[93px] py-1 mb-4 ">Add To Cart</button>
                  </div>
                 </div>
                 <div>
@@ -150,7 +150,7 @@
     <!-- trusted seller section -->
      <section class="mt-36 md:flex md:items-center md:justify-center gap-10">
       <div class="relative">
-         <div class="md:block hidden  w-1/4 absolute -top-20 left-[350px] ">
+         <div class="md:block hidden  w-1/4 absolute -top-20 left-[450px] ">
             <img   src="assets/trusted-badge.png" alt="">
          </div>
          <div class="w-[96%] pb-4 mx-auto">
@@ -188,7 +188,7 @@
               <div class="pb-6 brightness-50 flex justify-center ">
                <img class="rounded-xl" src="assets/deal-bloom.png" alt="">
             </div>
-            <div class="absolute top-8 left-28">
+            <div class="absolute top-20 left-20">
                <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
             <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
             </div>
@@ -196,7 +196,7 @@
             <div class="relative brightness-50 flex justify-center mb-6">
                <img class="rounded-xl" src="assets/deal-ana.png" alt="">
             </div>
-            <div class="absolute bottom-16 left-28">
+            <div class="absolute bottom-24 left-24">
               <h1 class="text-white font-bold text-xl ">60% off | Bloom Plant</h1>
                <u class="text-white">  <p class="text-white font-semibold text-center ">Shop Now</p></u>
             </div>
@@ -221,7 +221,7 @@
       </section>
       <!-- input section -->
        <section class="relative mb-10">
-         <div >
+         <div class="">
             <img src="assets/news-letter-bg.png" alt="">
          </div>
          <div class="absolute bottom-6 left-16 md:bottom-48 md:left-[500px]">
